[package]
name = "sdk_pulse"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
bip39 = { version = "2", features = ["rand"] }
breez-sdk-core = { git = "https://github.com/breez/breez-sdk", rev = "02b25ca2dd57de97c50d7cab5192fe72768687d8" }
csv = "1.2"
figment = { version = "0.10", features = ["toml"]}
log = "0.4"
serde = "1"
tokio = "1"