[package]
name = "sdk_pulse"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
bip39 = { version = "2", features = ["rand"] }
breez-sdk-core = { git = "https://github.com/breez/breez-sdk", rev = "9538d1143f3dc05729e5fd4fe0a6c46fe305b7a2" }
csv = "1.2"
figment = { version = "0.10", features = ["toml"]}
log = "0.4"
serde = "1"
tokio = "1"