[package]
name = "sdk_pulse"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
bip39 = { version = "2", features = ["rand"] }
breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.4.1" }
csv = "1.2"
figment = { version = "0.10", features = ["toml"]}
log = "0.4"
serde = "1"
tokio = "1"